<resources>
    <string name="app_name">DUOS</string>
    <string name="img_app_logo">logo image</string>
    <string name="ic_back">back icon</string>
    <string name="menu_partner">파트너찾기</string>
    <string name="menu_friend">친구목록</string>
    <string name="menu_chat">채팅</string>
    <string name="menu_mypage">마이페이지</string>
    <string name="default_fail">네트워크연결이 원활하지 않습니다</string>
    <string name="login">로그인</string>
    <string name="login_id_hint">아이디(이메일)</string>
    <string name="login_email_hint">직접입력</string>
    <string name="login_email_delimiter">\@</string>
    <string name="login_name_hint">이름</string>
    <string name="login_signup">회원가입</string>
    <string name="signup">회원가입&#160;</string>
    <string name="signup_agreement_title">듀오스 약관 동의</string>
    <string name="signup_agreement_detail">듀오스 서비스 이용을 위하여\n약관 동의가 필요합니다.</string>
    <string name="signup_agreement_all">모두 동의합니다</string>
    <string name="signup_agreement_essential_01">(필수) 듀오스 이용약관</string>
    <string name="signup_agreement_essential_02">(필수) 듀오스 개인정보 수집 및 이용동의</string>
    <string name="signup_phone_number">휴대전화</string>
    <string name="signup_phone_number_hint"><font size="16">010-0000-0000</font></string>
    <string name="signup_phone_verifying">인증번호</string>
    <string name="signup_phone_verifying_hint"><font size="16">인증번호를 입력해 주세요</font></string>
    <string name="signup_next_btn">다음</string>
    <string name="signup_next_btn_02">완료</string>
    <string name="signup_phone_verifying_time">05:00</string>
    <string name="signup_phone_verifying_again">인증번호 다시 받기></string>
    <string name="signup_nick_name">닉네임</string>
    <string name="signup_nick_name_hint">영어, 한글, 숫자 조합 2-10자리</string>
    <string name="signup_nick_name_error">영어 또는 한글과 숫자를 조합한 2-10자리만 가능합니다</string>
    <string name="signup_nick_name_duplicate">중복확인</string>
    <string name="signup_phone_verifying_notice">휴대폰 번호는 인증 용도 외에는 사용되지 않으며 타인에게 공개되지 않습니다.</string>
    <string name="signup_sex">성별</string>
    <string name="signup_sex_man">남성</string>
    <string name="signup_sex_woman">여성</string>
    <string name="signup_birth">생년월일</string>
    <string name="signup_birth_hint">생년월일을 입력해 주세요</string>
    <string name="signup_local">지역</string>
    <string name="signup_local_set">장소를 선택해 주세요</string>
    <string name="signup_local_dialog_set">지역 설정</string>
    <string name="signup_local_dialog_set_hint">지역명 검색 예) 서울, 마포구</string>
    <string name="signup_length_of_play">구력</string>
    <string name="signup_length_of_play_1">1개월 미만</string>
    <string name="signup_length_of_play_2">3개월 미만</string>
    <string name="signup_length_of_play_3">6개월 미만</string>
    <string name="signup_length_of_play_4">1년 미만</string>
    <string name="signup_length_of_play_5">2년 미만</string>
    <string name="signup_length_of_play_6">3년 미만</string>
    <string name="signup_length_of_play_7">4년 미만</string>
    <string name="signup_length_of_play_8">5년 미만</string>
    <string name="signup_length_of_play_9">6년 미만</string>
    <string name="signup_length_of_play_10">7년 미만</string>
    <string name="signup_length_of_play_11">8년 미만</string>
    <string name="signup_length_of_play_12">9년 미만</string>
    <string name="signup_length_of_play_13">10년 미만</string>
    <string name="signup_length_of_play_14">10년 이상</string>
    <string name="signup_last_page">회원가입 마지막 페이지 입니다. 마지막 마무리까지 화이팅!</string>
    <string name="signup_profile_image">프로필 사진</string>
    <string name="signup_profile_introduce">자기 소개</string>
    <string name="signup_profile_introduce_text">간단한 자기 소개를 적어 주세요</string>
    <string name="signup_local_dialog_close_btn">닫기</string>
    <string name="signup_local_dialog_ok_btn">확인</string>
    <string name="signup_local_dialog_large_region">시/도</string>
    <string name="signup_local_dialog_small_region">시/구/군</string>
    <string-array name="upload_pic_dialog_title">
        <item>카메라</item>
        <item>앨범</item>

    </string-array>
    <string name="splash_button_start">가입하기</string>
    <string name="splash_duos_logo">DUOS</string>
    <string name="splash_goto_login_text_01">이미 계정이 있나요?&#160;</string>
    <string name="splash_goto_login_text_02">로그인</string>
    <string name="splash_title_01">운동 친구 찾는 새로운 방법, 듀오스</string>
    <string name="splash_text_01">같이 운동할 친구를 찾고 싶은\n모든 분들을 위한 서비스</string>
    <string name="splash_title_02">나에게 딱 맞는 친구 추천</string>
    <string name="splash_text_02">듀오스가 추천하는\n나를 위한 친구들을 만나보세요</string>
    <string name="splash_title_03">채팅하고 약속 잡기</string>
    <string name="splash_text_03">개인정보 교환 없이\n채팅을 통해 약속을 잡아보세요</string>
    <string name="splash_service_text_01">로그인하면 듀오스&#160;</string>
    <string name="splash_goto_service"><u>이용약관</u></string>
    <string name="splash_service_text_02">에 동의하는 것으로 간주됩니다.</string>
    <string name="splash_privacy_text_01">듀오스의 회원정보 처리방식은&#160;</string>
    <string name="splash_goto_privacy"><u>개인정보 취급 방침</u></string>
    <string name="splash_privacy_text_02">에서 확인해 보세요.</string>
    <string name="number_picker_year">년</string>
    <string name="number_picker_month">월</string>
    <string name="number_picker_day">일</string>
    <string name="partner_search_user_id">         </string>
    <string name="partner_search_nim">\ 님,</string>
    <string name="partner_search_my_partner">운동 친구</string>
    <string name="partner_search_lets_search">를 만나보세요</string>
    <string name="partner_search_recommended_partner">추천 파트너</string>
    <string name="partner_search_filter">서울시 마포구</string>
    <string name="partner_search_recommended_partner_location">서울시 마포구</string>
    <string name="partner_search_recommended_partner_ball_capability">구력 1년</string>
    <string name="partner_search_recommended_partner_id">berlinalena</string>
    <string name="partner_search_recommended_partner_age">30대</string>
    <string name="partner_search_recommended_partner_star_rating">4.8</string>
    <string name="partner_search_recommended_partner_review_count">11</string>
    <string name="partner_filter_title">필터</string>
    <string name="partner_filter_init">초기화</string>
    <string name="partner_filter_gender">성별</string>
    <string name="partner_filter_male">남성</string>
    <string name="partner_filter_female">여성</string>
    <string name="partner_filter_careless">무관</string>
    <string name="partner_filter_age">연령</string>
    <string name="partner_filter_age_min">10</string>
    <string name="partner_filter_age_unit">대</string>
    <string name="partner_filter_age_min_bottom">10대</string>
    <string name="partner_filter_age_set_min">10</string>
    <string name="partner_filter_age_set_max">40</string>
    <string name="partner_filter_age_max">60</string>
    <string name="partner_filter_age_max_bottom">60대</string>
    <string name="partner_filter_ball_capacity_min">0</string>
    <string name="partner_filter_ball_capacity_min_bottom">0개월</string>
    <string name="partner_filter_ball_capacity_set_min">0개월</string>
    <string name="partner_filter_ball_capacity_set_max">10</string>
    <string name="partner_filter_ball_capacity_max">10</string>
    <string name="partner_filter_ball_capacity_max_bottom">10년</string>
    <string-array name="partner_filter_age_array">
        <item>10대</item>
        <item>20대</item>
        <item>30대</item>
        <item>40대</item>
        <item>50대</item>
        <item>60대</item>
    </string-array>
    <string name="partner_filter_ball_capability">구력</string>
    <string name="partner_filter_ball_capability_year_min_bottom">0개월</string>
    <string name="partner_filter_ball_capability_year_max_bottom">10년</string>
    <string-array name="partner_filter_ball_capability_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="partner_filter_apply">적용하기</string>
    <string name="partner_profile_title">프로필</string>
    <string name="partner_filter_count_notice_text">필터는 하루 3번까지 그리고\n필터링 결과로 10명까지 볼 수 있습니다</string>
    <string name="partner_filter_remain_count">남은 필터 적용 횟수:&#160;</string>
    <string name="partner_filter_count_unit">회</string>
    <string name="partner_filter_count_cancel">취소</string>
    <string name="partner_filter_count_apply">적용</string>
    <string name="partner_filter_unable">적용 가능한 필터 횟수가 모두 소진 되었습니다.</string>
    <string name="partner_filter_unable_02">필터는 하루 최대 3번</string>
    <string name="partner_filter_unable_03">까지 적용 가능합니다.</string>
    <string name="chat_list_title">채팅</string>
    <string name="chat_list_chat_preview">네네 그럼 그때 뵐게요~!</string>
    <string name="chat_list_chat_message_time">오후 10:59</string>
    <string name="chatting_title">채팅(</string>
    <string name="chatting_partner_id">djeikd0620</string>
    <string name="chatting_title_right_brck">)</string>
    <string name="chatting_make_plan">약속잡기</string>
    <string name="chatting_show_plan">약속</string>
    <string name="chatting_partner_message">안녕하세요~ 반갑습니다!!</string>
    <string name="chatting_my_message">안녕하세요!ㅎㅎ</string>
    <string name="chatting_message_time">지금</string>
    <string name="chatting_et_hint">이 곳에서 채팅을 시작할 수 있어요</string>
    <string name="chatting_date_border">2022년 01월 21일</string>
    <string name="make_plan_title">약속잡기</string>
    <string name="make_plan_time">시간</string>
    <string name="make_plan_confirm">약속잡기</string>
    <string name="edit_plan_title">약속수정</string>
    <string name="edit_plan_confirm">적용하기</string>
    <string name="plan_info_title">약속(</string>
    <string name="plan_info_title_id">djeikd0620</string>
    <string name="plan_info_title_right_brck">)</string>
    <string name="plan_info_delete">삭제</string>
    <string name="plan_info_date_title">날짜</string>
    <string name="plan_info_date">2021.12.30</string>
    <string name="plan_info_time_title">시간</string>
    <string name="plan_info_time">17:20</string>
    <string name="plan_info_revise">수정하기</string>
    <string name="plan_info_delete_dialog_message">약속을 삭제하시겠습니까?\n한 번 삭제된 약속은 복구할 수 없습니다.</string>
    <string name="plan_info_delete_dialog_cancel_btn">취소</string>
    <string name="plan_info_delete_dialog_delete_btn">삭제</string>
    <string-array name="custom_weekdays">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
    <string-array name="custom_months">
        <item>JAN</item>
        <item>FEB</item>
        <item>MAR</item>
        <item>APR</item>
        <item>MAY</item>
        <item>JUN</item>
        <item>JUL</item>
        <item>AUG</item>
        <item>SEP</item>
        <item>OCT</item>
        <item>NOV</item>
        <item>DEC</item>
    </string-array>
    <string name="my_profile_my_profile">나의 프로필</string>
    <string name="my_profile_edit">수정하기</string>
    <string name="my_profile_my_nickname">tennis01</string>
    <string name="my_profile_my_generation_dummy">30대</string>
    <string name="my_profile_sex_female">여</string>
    <string name="my_profile_my_location">서울시 마포구</string>
    <string name="my_profile_my_grade">5.0</string>
    <string name="friend_list_dialog_text_01">추천 받은지&#160;</string>
    <string name="friend_list_dialog_date">7일</string>
    <string name="friend_list_dialog_text_02">이 지난 친구 목록은</string>
    <string name="friend_list_dialog_text_03">순차적으로 삭제됩니다.</string>
    <string name="friend_list_dialog_ok_btn">확인</string>
    <string name="friend_list_dialog_again">다시 보지 않기</string>
    <string name="daily_matching_option_delete">삭제하기</string>
    <string name="daily_matching_option_edit">수정하기</string>
    <string name="daily_matching_option_block">차단하기</string>
    <string name="daily_matching_option_report">신고하기</string>
    <string name="daily_matching_option_cancel">취소</string>
</resources>