<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/option_block_tv"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/daily_matching_option_block"
        android:textColor="@color/grey"
        android:textFontWeight="600"
        android:textSize="16sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/option_report_tv"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/daily_matching_option_report"
        android:textColor="@color/grey"
        android:textFontWeight="600"
        android:textSize="16sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option_cancle_btn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/unselected_btn"
        android:backgroundTint="@color/white_smoke_E"
        android:text="@string/daily_matching_option_cancel"
        android:textColor="@color/dark_gray_B0"
        android:textFontWeight="700"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.appcompat.widget.LinearLayoutCompat>