<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/friend_list_dialog_constraint_01_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="42dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/friend_list_dialog_text_01_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friend_list_dialog_text_01"
                android:textColor="@color/grey"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/friend_list_dialog_text_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textColor="@color/primary"
                android:text="@string/friend_list_dialog_date"/>

            <TextView
                android:id="@+id/friend_list_dialog_text_02_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friend_list_dialog_text_02"
                android:textColor="@color/grey"
                android:textSize="15sp"/>


        </LinearLayout>

        <TextView
            android:id="@+id/friend_list_dialog_text_03_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friend_list_dialog_text_03"
            android:textColor="@color/grey"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/friend_list_dialog_constraint_01_cl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingTop="5dp"
            android:paddingBottom="40dp"/>

        <ImageView
            android:id="@+id/friend_list_dialog_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@drawable/friend_list_dialog_line"
            app:layout_constraintTop_toBottomOf="@id/friend_list_dialog_text_03_tv"/>

        <TextView
            android:id="@+id/friend_list_dialog_ok_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/friend_list_dialog_ok_btn"
            app:layout_constraintTop_toBottomOf="@id/friend_list_dialog_line"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/primary"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/friend_list_dialog_constraint_02_cl"
        android:layout_width="139dp"
        android:layout_height="47dp"
        android:background="@color/black"
        android:alpha="0.7"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <CheckBox
            android:id="@+id/friend_list_dialog_check_box_cb"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/friend_list_dialog_check_box_custom"
            android:button="@null"
            android:layout_marginStart="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/friend_list_dialog_check_again_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friend_list_dialog_again"
            android:textSize="13sp"
            android:textColor="@color/dark_gray_A"
            app:layout_constraintStart_toEndOf="@id/friend_list_dialog_check_box_cb"
            app:layout_constraintTop_toTopOf="@id/friend_list_dialog_check_box_cb"
            app:layout_constraintBottom_toBottomOf="@id/friend_list_dialog_check_box_cb"
            android:layout_marginStart="10dp"/>



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.appcompat.widget.LinearLayoutCompat>