<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginHorizontal="16dp"
    android:layout_height="200dp">

    <TextView
        android:id="@+id/plan_info_delete_dialog_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plan_info_delete_dialog_message"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/plan_info_delete_dialog_radio_layout"/>

    <LinearLayout
        android:id="@+id/plan_info_delete_dialog_radio_layout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/test_01"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/plan_info_delete_dialog_cancel_btn"
            android:textColor="@color/dark_gray_A"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/location_ok_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/plan_info_delete_dialog_delete_btn"
            android:textSize="16sp"
            android:textColor="@color/primary"
            android:textStyle="bold"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>