<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp">
        <ImageView
            android:id="@+id/plan_info_back_iv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="23dp"
            android:src="@drawable/ic_back_30"/>

        <TextView
            android:id="@+id/plan_info_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/plan_info_back_iv"
            app:layout_constraintTop_toTopOf="@id/plan_info_back_iv"
            app:layout_constraintBottom_toBottomOf="@id/plan_info_back_iv"
            android:layout_marginStart="11dp"
            android:text="@string/plan_info_title"
            android:textSize="19sp"
            android:textStyle="bold"
            android:fontFamily="@font/applesdgothicneoregular"/>

        <TextView
            android:id="@+id/plan_info_title_id_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/plan_info_title_tv"
            app:layout_constraintTop_toTopOf="@id/plan_info_title_tv"
            app:layout_constraintBottom_toBottomOf="@id/plan_info_title_tv"
            android:text="@string/plan_info_title_id"
            android:textSize="19sp"
            android:textStyle="bold"
            android:fontFamily="@font/applesdgothicneoregular"/>

        <TextView
            android:id="@+id/plan_info_title_right_brck_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/plan_info_title_id_tv"
            app:layout_constraintTop_toTopOf="@id/plan_info_title_tv"
            app:layout_constraintBottom_toBottomOf="@id/plan_info_title_tv"
            android:text="@string/plan_info_title_right_brck"
            android:textSize="19sp"
            android:textStyle="bold"
            android:fontFamily="@font/applesdgothicneoregular"/>

        <TextView
            android:id="@+id/plan_info_delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/plan_info_back_iv"
            app:layout_constraintBottom_toBottomOf="@id/plan_info_back_iv"
            android:text="@string/plan_info_delete"
            android:textSize="13sp"
            android:textColor="@color/primary"
            android:fontFamily="@font/applesdgothicneoregular"/>

        <View
            android:id="@+id/plan_info_top_divider"
            style="@style/Light_gray_Divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plan_info_back_iv"
            android:layout_marginTop="12dp"/>

        <TextView
            android:id="@+id/plan_info_date_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/plan_info_date_title"
            android:textSize="14sp"
            android:textColor="@color/nero"
            android:textStyle="bold"
            android:fontFamily="@font/applesdgothicneoregular"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="19dp"
            app:layout_constraintTop_toBottomOf="@id/plan_info_top_divider"/>

        <ImageView
            android:id="@+id/plan_info_calendar_iv"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_calender"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/plan_info_date_title_tv"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/plan_info_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plan_info_date"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/applesdgothicneoregular"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/plan_info_calendar_iv"
            app:layout_constraintTop_toTopOf="@id/plan_info_calendar_iv"
            app:layout_constraintBottom_toBottomOf="@id/plan_info_calendar_iv"/>

        <TextView
            android:id="@+id/plan_info_time_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/plan_info_date_title"
            android:textSize="14sp"
            android:textColor="@color/nero"
            android:textStyle="bold"
            android:fontFamily="@font/applesdgothicneoregular"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="29dp"
            app:layout_constraintTop_toBottomOf="@id/plan_info_calendar_iv"/>

        <ImageView
            android:id="@+id/plan_info_clock_iv"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_clock"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/plan_info_time_title_tv"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/plan_info_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plan_info_time"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/applesdgothicneoregular"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/plan_info_clock_iv"
            app:layout_constraintTop_toTopOf="@id/plan_info_clock_iv"
            app:layout_constraintBottom_toBottomOf="@id/plan_info_clock_iv"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/plan_info_revise_tv"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/plan_info_revise"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/applesdgothicneoregular"
        android:textAlignment="center"
        android:gravity="center"
        android:clickable="true"
        android:enabled="true"
        android:background="@color/primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>